[package]
name = "trade_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "*", features = ["full"] }
if-addrs = "*"
tokio-tungstenite = "0.15"
tokio-native-tls = "0.3"
futures-util = "0.3"
native-tls = "0.2"
rand = "*"
regex = "*"
validator = "*"
lettre = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "*", features = ["serde"] }