[package]
name = "trade_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.0", features = ["full"] }
if-addrs = "*"
tokio-tungstenite = {version = "*"}
futures-util = "0.3"
rand = "*"
regex = "*"
validator = "*"
lettre = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "*", features = ["serde"] }
yahoo_tick_grabber = "*"
tokio-rustls = "*"
pki-types = { package = "rustls-pki-types", version = "1" }
rustls-pemfile = "*"
rustls = { version = "0.23.5", default-features = false, features = ["std"] }
